added all tables as classes